@@ -7,8 +7,7 @@ Uploaders: Simon McVittie <smcv@debian.org>,
            Jonny Lamb <jonny@debian.org>,
            Adam Conrad <adconrad@0c3.net>,
            George Kiagiadakis <kiagiadakis.george@gmail.com>
-Build-Depends: cdbs,
-               debhelper (>= 9),
+Build-Depends: debhelper (>= 9),
                cmake,
                doxygen,
                graphviz,
