@@ -1,1 +1,0 @@
-usr/share/doc/libtelepathy-qt4-2 usr/share/doc/libtelepathy-qt4-dev
